# dream-engine

./: .gitignore  .project  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.4.9-pre1  Doxyfile  Doxyfile.in  Makefile  Makefile.dreamcast  Makefile.linux  Makefile.psp  README.md  Sol2  build.sh  debug-test.sh  def.mk  deps.txt  dreamcast.mk  env.sh  linux.mk  make-eclipse-project.sh  make-makefile.sh  make-vs.sh  make-xcode-project.sh  make-xcode.sh  node.c  node.h  psp.mk  test_main.c  test_node.c  test_node.h
Dependencies/glad/: CMakeLists.txt
Dependencies/imgui-1.79/: CMakeLists.txt
Dependencies/lua-5.3.6/: CMakeLists.txt
DreamCore/: ArgumentParser.cpp  ArgumentParser.h  AssetDefinition.cpp  AssetDefinition.h  CMakeLists.txt  Constants.cpp  Constants.h  DreamEngine.cpp  DreamEngine.h  Environment.cpp  Environment.h  Event.cpp  Event.h  FileReader.cpp  FileReader.h  GameController.cpp  GameController.h  IAssetInstance.cpp  IAssetInstance.h  Log.cpp  Math.cpp  Math.h  Project.cpp  Project.h  ProjectRuntime.cpp  ProjectRuntime.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  String.cpp  String.h  Time.cpp  Time.h  Transform3D.cpp  Transform3D.h  Unit.h  Uuid.cpp  Uuid.h
DreamCore/Base/: DeferredLoadRuntime.cpp  DeferredLoadRuntime.h  Definition.cpp  Definition.h  LockableObject.cpp  LockableObject.h  Runtime.cpp  Runtime.h  RuntimeLoadFromDefinitionTask.cpp  RuntimeLoadFromDefinitionTask.h  RuntimeTasks.cpp  RuntimeTasks.h  ThreadLockFailedException.cpp  UseCountable.cpp  UseCountable.h
DreamCore/Common/: ALHeader.h  ArgumentParser.cpp  ArgumentParser.h  AssetDefinition.cpp  AssetDefinition.h  AssetType.cpp  AssetType.h  Constants.cpp  Constants.h  Definition.cpp  Definition.h  Directory.cpp  Directory.h  DreamObject.cpp  DreamObject.h  Environment.cpp  Environment.h  Event.cpp  File.cpp  File.h  GLHeader.h  IAssetInstance.cpp  IAssetInstance.h  IDefinition.cpp  IDefinition.h  ILoggable.cpp  ILoggable.h  IRuntime.cpp  IRuntime.h  JsonData.cpp  JsonData.h  LockableObject.cpp  LockableObject.h  Logger.h  Math.h  Runtime.cpp  Runtime.h  ThreadLockFailedException.h  Transform3D.cpp  Transform3D.h  (+5 more)
DreamCore/Components/: AssetDefinition.cpp  AssetDefinition.h  AssetInstance.cpp  AssetInstance.h  AssetRuntime.cpp  AssetRuntime.h  Cache.cpp  Cache.h  Cache.tpp  Component.cpp  Component.h  ComponentThread.cpp  ComponentThread.h  DiscreteAssetInstance.cpp  DiscreteAssetInstance.h  DiscreteAssetRuntime.cpp  DiscreteAssetRuntime.h  Event.cpp  Event.h  IAssetDefinition.cpp  IAssetDefinition.h  IAssetInstance.cpp  IAssetInstance.h  ICache.cpp  ICache.h  IComponent.cpp  IComponent.h  SharedAssetInstance.cpp  SharedAssetInstance.h  SharedAssetRuntime.cpp  SharedAssetRuntime.h  Task.cpp  Task.h  Time.cpp  Time.h  Transform.cpp  Transform.h  Transform3D.cpp  Transform3D.h
DreamCore/Entity/: BoundingBox.cpp  BoundingBox.h  EntityDefinition.cpp  EntityDefinition.h  EntityRuntime.cpp  EntityRuntime.h  EntityTasks.cpp  EntityTasks.h  SceneEntityDefinition.cpp  SceneEntityDefinition.h  TemplateEntityDefinition.cpp  TemplateEntityDefinition.h  TransformSpace.h
DreamCore/Lua/: ILuaExposable.cpp  ILuaExposable.h  InputEvent.cpp  InputEvent.h  LuaEngine.cpp  LuaEngine.h  LuaScriptCache.cpp  LuaScriptCache.h  LuaScriptInstance.cpp  LuaScriptInstance.h  ScriptDefinition.cpp  ScriptDefinition.h
DreamCore/Math/: Conversion.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
DreamCore/Project/: AssetDefinition.cpp  AssetDefinition.h  Project.cpp  Project.h  ProjectContext.cpp  ProjectContext.h  ProjectDefinition.cpp  ProjectDefinition.h  ProjectDirectory.cpp  ProjectDirectory.h  ProjectJsonData.cpp  ProjectJsonData.h  ProjectRuntime.cpp  ProjectRuntime.h
DreamCore/Scene/: Scene.cpp  Scene.h  SceneDefinition.cpp  SceneDefinition.h  SceneJsonData.cpp  SceneJsonData.h  SceneObject.cpp  SceneObject.h  SceneRuntime.cpp  SceneRuntime.h  SceneState.h
DreamCore/Storage/: Directory.cpp  Directory.h  File.cpp  File.h  ProjectDirectory.cpp  ProjectDirectory.h  StorageManager.cpp  StorageManager.h
DreamCoreTests/: CMakeLists.txt  Main.cpp  TestArgumentParser.cpp  TestArgumentParser.h  TestDream.cpp  TestFileReader.cpp  TestFileReader.h  TestMain.cpp  TestProject.cpp  TestProject.h  TestScene.cpp  TestScene.h
DreamGLFW/: CMakeLists.txt  DefaultPrintListener.cpp  DefaultPrintListener.h  GLFWWindowComponent.cpp  GLFWWindowComponent.h  Main.cpp
DreamOpenAL/: ALHeader.h  CMakeLists.txt  OpenALAudioComponent.cpp  OpenALAudioComponent.h  OpenALAudioRuntime.cpp  OpenALAudioRuntime.h  OpenALImplementation.cpp  OpenALImplementation.h
DreamSDL/: CMakeLists.txt  Main.cpp  SDLJoystickManager.cpp  SDLJoystickManager.h  SdlLuaApi.cpp  SdlLuaApi.h
DreamTool/: CMakeLists.txt  DTContext.cpp  DTContext.h  DTState.cpp  DTState.h  DreamToolContext.cpp  DreamToolContext.h  DreamToolWindow.cpp  DreamToolWindow.h  InputTarget.h  Main.cpp  config.json  package.json
DreamToolImGui/: CMakeLists.txt  Main.cpp
Luabind/: CMakeLists.txt  INSTALL  luabind.pc.in
LuabindTests/: .gitignore  CMakeLists.txt  benchmark.cpp  test_adopt.cpp  test_adopt_wrapper.cpp  test_attributes.cpp  test_has_get_pointer.cpp
NanoVG/: CMakeLists.txt
SOIL/: CMakeLists.txt
SOIL/src/: SOIL.c  (+3 more)
src/: .graph.c.swp  .node.c.swp  ArgumentParser.cpp  ArgumentParser.h  AssetDefinition.cpp  AssetDefinition.h  AssetInstance.cpp  AssetInstance.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Dream.cpp  Dream.h  DreamEngine.cpp  DreamEngine.h  Environment.cpp  Environment.h  Event.cpp  Event.h  FileReader.cpp  FileReader.h  GameController.cpp  GameController.h  HTTPClient.cpp  HTTPClient.h  IAssetInstance.cpp  IAssetInstance.h  Interface.cpp  Interface.h  JoystickManager.cpp  JoystickManager.h  Main.cpp  Math.cpp  Math.h  OALAudio.cpp  Project.cpp  Project.h  (+21 more)
test/: ArgumentParserTest.cpp  ArgumentParserTest.h  CMakeLists.txt  DreamTest.cpp  DreamTest.h  Main.cpp  ProjectTest.cpp  ProjectTest.h  SceneTest.cpp  SceneTest.h  TestMain.cpp
(+2625 files in other folders)
